--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-json-tree-view": "2.1.3",
+        "liquor-tree": "^0.2.40"
     }
 }
