--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
         "vue": "^2.5.17",
         "vue-json-tree-view": "2.1.3",
         "liquor-tree": "^0.2.40"
+    },
+    "dependencies": {
+        "vue-focus": "^2.1.0",
+        "vue-textarea-autosize": "^1.0.4",
+        "vue-the-mask": "^0.11.1"
     }
 }
