--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "vue-focus": "^2.1.0",
+        "vue-picture-input": "^2.1.6",
         "vue-textarea-autosize": "^1.0.4",
         "vue-the-mask": "^0.11.1"
     }
