--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@ yarn-error.log
 .env
 .phpunit.result.cache
 /npm-cache
+
+public/assets/img/19\.jpg
+
+public/assets/img/21\.jpg
+
+public/assets/img/3\.jpg
+
+public/assets/img/4\.jpg
+
+public/assets/img/6\.jpg
+
+public/assets/img/7\.jpg
